@@ -46,6 +46,7 @@ Bugs fixed:
 - 2993137 CMSetProperty fails for CMPIInstance for EmbeddedObject
 - 2994921 Make RegisteredProfile for PRP a static instance
 - 2997928 Namespace incorrect in test_providers
+- 2997961 IndRetryTest.sh leaves IndicationSubscription modded
 
 Changes in 1.3.7
 ================
